fix spacing of footer

--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ footer {
  position: absolute;
  left: 0;
  gap:2rem;
+  margin-top: 3rem;
 }
 
 
